--- a/ShaderGenerator/ShaderGenerator.vcxproj.filters
+++ b/ShaderGenerator/ShaderGenerator.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="pch.h" />
     <ClInclude Include="ShaderCompiler.h">
       <Filter>Helpers</Filter>
     </ClInclude>
@@ -14,9 +13,11 @@
     <ClInclude Include="CommandLineParser.h">
       <Filter>Helpers</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Config</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pch.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderCompiler.cpp">
       <Filter>Helpers</Filter>
@@ -30,17 +31,24 @@
     <ClCompile Include="CommandLineParser.cpp">
       <Filter>Helpers</Filter>
     </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>Config</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="PropertySheet.props" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="ComputeShader.hlsl" />
+    <None Include="packages.config">
+      <Filter>Config</Filter>
+    </None>
+    <None Include="PropertySheet.props">
+      <Filter>Config</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Helpers">
       <UniqueIdentifier>{9ec465aa-4335-451e-88e5-a1be3afc77fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Config">
+      <UniqueIdentifier>{9926b92a-b8c6-4ab0-8534-a475390821c5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
