--- a/ShaderImporter/ShaderImporter.vcxproj
+++ b/ShaderImporter/ShaderImporter.vcxproj
@@ -60,6 +60,22 @@
     <Import Project="PropertySheet.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <OutDir>$(ProjectDir)bin/$(Configuration)/$(Platform)/</OutDir>
+    <IntDir>$(ProjectDir)obj/$(Configuration)/$(Platform)/</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <OutDir>$(ProjectDir)bin/$(Configuration)/$(Platform)/</OutDir>
+    <IntDir>$(ProjectDir)obj/$(Configuration)/$(Platform)/</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(ProjectDir)bin/$(Configuration)/$(Platform)/</OutDir>
+    <IntDir>$(ProjectDir)obj/$(Configuration)/$(Platform)/</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(ProjectDir)bin/$(Configuration)/$(Platform)/</OutDir>
+    <IntDir>$(ProjectDir)obj/$(Configuration)/$(Platform)/</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -101,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ShaderGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
