--- a/ShaderImporter/ShaderImporter.vcxproj.filters
+++ b/ShaderImporter/ShaderImporter.vcxproj.filters
@@ -5,7 +5,6 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="PropertySheet.props" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -14,5 +13,8 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="ShaderGenerator.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ShaderGroup Include="ComputeShader.hlslg" />
   </ItemGroup>
 </Project>
