--- a/ShaderGenerator.targets
+++ b/ShaderGenerator.targets
@@ -1,15 +1,20 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <AvailableItemName Include="ShaderGroup">
-      <Targets>BuildShaderGroups</Targets>
+      <Targets>BuildShaderGroups;GenerateShaderGroupHeaders</Targets>
     </AvailableItemName>
   </ItemGroup>
 
   <Target Name="BuildShaderGroups"
           BeforeTargets="ClCompile"
-          Inputs="%(ShaderGroup.Identity)"
-          Outputs="$(OutDir)%(ShaderGroup.Filename).csg;$(IntDir)ShaderGenerator\%(ShaderGroup.Filename).h">    
-      <Message Text="%(ShaderGroup.Identity)" />
-      <Exec Command="D:\cae\dev\ShaderCompiler\ShaderGenerator\bin\Debug\x64\ShaderGenerator.exe -i=%(ShaderGroup.Identity) -o=$(OutDir) -h=$(IntDir)ShaderGenerator -n=%(ShaderGroup.HeaderNamespace) -p=%(ShaderGroup.OptimizationLevel) -d=%(ShaderGroup.IsEmittingDebugSymbols)"/>
+          Inputs="@(ShaderGroup)"
+          Outputs="@(ShaderGroup->'$(OutDir)%(Filename).csg')">
+      <Exec Command="D:\cae\dev\ShaderCompiler\ShaderGenerator\bin\Debug\x64\ShaderGenerator.exe -i=%(ShaderGroup.Identity) -o=$(OutDir) -p=%(ShaderGroup.OptimizationLevel) -d=%(ShaderGroup.IsEmittingDebugSymbols)"/>
+  </Target>
+  <Target Name="GenerateShaderGroupHeaders"
+          BeforeTargets="ClCompile"
+          Inputs="@(ShaderGroup)"
+          Outputs="@(ShaderGroup->'$(IntDir)ShaderGenerator\%(Filename).h')">
+      <Exec Command="D:\cae\dev\ShaderCompiler\ShaderGenerator\bin\Debug\x64\ShaderGenerator.exe -i=%(ShaderGroup.Identity) -h=$(IntDir)ShaderGenerator -n=%(ShaderGroup.HeaderNamespace)"/>
   </Target>
 </Project>
