--- a/nuget/ShaderGenerator.nuspec
+++ b/nuget/ShaderGenerator.nuspec
@@ -5,7 +5,7 @@
     <id>ShaderGenerator</id>
 
     <!-- The package version number that is used when resolving dependencies -->
-    <version>1.0.21.0</version>
+    <version>1.0.23.0</version>
 
     <!-- Authors contain text that appears directly on the gallery -->
     <authors>Péter Major</authors>
@@ -27,7 +27,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 
     <!-- Any details about this particular release -->
-    <releaseNotes>Fix include directories</releaseNotes>
+    <releaseNotes>Updated int handling</releaseNotes>
 
     <!-- The description can be used in package manager UI. Note that the
              nuget.org gallery uses information you add in the portal. -->
