--- a/nuget/ShaderGenerator.nuspec
+++ b/nuget/ShaderGenerator.nuspec
@@ -5,7 +5,7 @@
     <id>ShaderGenerator</id>
 
     <!-- The package version number that is used when resolving dependencies -->
-    <version>1.0.26.0</version>
+    <version>1.0.31.0</version>
 
     <!-- Authors contain text that appears directly on the gallery -->
     <authors>Péter Major</authors>
@@ -27,11 +27,11 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 
     <!-- Any details about this particular release -->
-    <releaseNotes>Updated int handling</releaseNotes>
+    <releaseNotes>Added zip compression</releaseNotes>
 
     <!-- The description can be used in package manager UI. Note that the
              nuget.org gallery uses information you add in the portal. -->
-    <description>Avoid writing headers when there is no change.</description>
+    <description>Generate multiple shader variants / permutations from HLSL.</description>
 
     <!-- Copyright information -->
     <copyright>Copyright ©2021 Péter Major</copyright>
