--- a/nuget/ShaderGenerator.nuspec
+++ b/nuget/ShaderGenerator.nuspec
@@ -5,7 +5,7 @@
     <id>ShaderGenerator</id>
 
     <!-- The package version number that is used when resolving dependencies -->
-    <version>1.0.35.0</version>
+    <version>1.0.36.0</version>
 
     <!-- Authors contain text that appears directly on the gallery -->
     <authors>Péter Major</authors>
@@ -27,14 +27,14 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 
     <!-- Any details about this particular release -->
-    <releaseNotes>Improved shader loading performance and reduced RAM requirements</releaseNotes>
+    <releaseNotes>Allow custom intermediate and output directories.</releaseNotes>
 
     <!-- The description can be used in package manager UI. Note that the
              nuget.org gallery uses information you add in the portal. -->
     <description>Generate multiple shader variants / permutations from HLSL.</description>
 
     <!-- Copyright information -->
-    <copyright>Copyright ©2021 Péter Major</copyright>
+    <copyright>Copyright ©2023 Péter Major</copyright>
 
     <!-- Tags appear in the gallery and can be used for tag searches -->
     <tags>HLSL</tags>
